# gnostr-web

./: .gitignore  .gnostr  Cargo.toml  GNUmakefile  HYPER.md  README.md  RQBITS_Cargo.toml  build.rs  cargo.mk  docker-compose.yml  gnostr.toml  gnostr_gnit  gnostr_web  hyper  repo.toml  run  server_key
.github/workflows/: docker-publish.yml
examples/russh-client/src/: main.rs
examples/russh-server/: Cargo.toml
examples/russh-server/src/: main.rs
html/: Cargo.toml  README.md  check  deny.toml
html/src/: lib.rs
modal/: .gitignore  .justfile  Cargo.toml  GNUmakefile  README.md  cargo.mk
modal/benches/: hasher.rs
modal/book/: book.toml
modal/src/: main.rs  shell.rs
modal/src/subcommand/: completions.rs
modal/src/subcommand/torrent/: show.rs
server/: Cargo.toml  gnostr  gnostr.toml  server.toml
server/src/: vars.rs
server/src/config/: repo.rs
server/src/git/: mod.rs
src/: git.rs  hyper.rs  lib.rs  main.rs  syntax_highlight.rs  vars.rs
src/git/: mod.rs
src/hyper/: Cargo.toml
src/hyper/src/: main.rs
src/methods/repo/: about.rs  commit.rs  diff.rs  snapshot.rs
src/site/: mod.rs
src/ssh/: messages.rs
ssh/: Cargo.toml  server.toml
ssh/src/: vars.rs
ssh/src/git/: mod.rs
ssh/src/ssh/: messages.rs
statics/sass/: _colours.scss  code.scss  diff.scss  style.scss  tables.scss
templates/: base.html
templates/repo/: commit.html  diff.html  log.html  refs.html  summary.html  tree.html
templates/repo/macros/: refs.html
upnp/: Cargo.toml
web/: .cargo-checksum.json  README.md  server_key
