[package]
name = "gnostr-web"
version = "0.0.2"
edition = "2021"
authors = ["gnostr admin@gnostr.org", "Tej Magar"]
description = "gnostr-web: a gnostr web/hyper web service."
license = "MIT"
documentation = "https://tejmagar.github.io/rusty-web/"
repository = "https://github.com/tejmagar/rusty-web/"

[dependencies]
regex = "1.10.3"
signal-hook = "0.3.17"

tempfile = "3.10.0"
urlencoding = "2.1.3"
web-view = { version = "0.7.3", path = "web-view" }

[dev-dependencies]
rand = "0.8.5"
