[package]
name = "gnostr-web"
version = "0.0.3"
edition = "2021"
authors = ["gnostr admin@gnostr.org", "Tej Magar"]
description = "gnostr-web: a gnostr web/hyper web service."
license = "MIT"
documentation = "https://tejmagar.github.io/rusty-web/"
repository = "https://github.com/tejmagar/rusty-web/"

[dependencies]
futures = { version = "0.3.6", default-features = false, features = ["async-await"] }
hyper = "0.13"
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
route-recognizer = "0.2"
bytes = "0.5"
async-trait = "0.1"

regex = "1.10.3"
signal-hook = "0.3.17"

tempfile = "3.10.0"
urlencoding = "2.1.3"
web-view = { version = "0.7.3", path = "web-view" }

[dev-dependencies]
rand = "0.8.5"
