[package]
edition = "2021"
name = "gnit-ssh"
version = "0.2.1"
description = "A self-hosted Git server that's easy to set up, use, and maintain."
homepage = "https://eejit.moh.ink"
readme = "README.md"
keywords = [
    "cli",
    "git",
]
categories = ["command-line-utilities"]
license = "MIT"

[dependencies.anyhow]
version = "1.0.70"

[dependencies.async-trait]
version = "0.1.85"

[dependencies.clean-path]
version = "0.2.1"

[dependencies.colored]
version = "2.0.0"

[dependencies.comrak]
version = "0.18.0"

[dependencies.env_logger]
version = "0.10.0"

[dependencies.futures]
version = "0.3.28"

[dependencies.log]
version = "0.4.17"

[dependencies.russh]
version = "0.37.1"
features = ["openssl"]

[dependencies.russh-keys]
version = "0.37.1"

[dependencies.sd-notify]
version = "0.4.1"

[dependencies.serde]
version = "1.0.159"
features = ["derive"]

[dependencies.shellwords]
version = "1.1.0"

[dependencies.tempfile]
version = "3.5.0"

[dependencies.tera]
version = "1.18.1"

[dependencies.textwrap]
version = "0.16.0"

[dependencies.tokio]
version = "1.27.0"
features = ["full"]

[dependencies.toml]
version = "0.7.3"
